# ai-pod

./: .gitignore  Cargo.toml  README.md  SECURITY_AUDIT.md  ai-pod.Dockerfile  claude.Dockerfile  install-local.sh  install.sh  release.sh  renovate.json
.github/workflows/: ci.yml  claude.yml  e2e-weekly.yml  release.yml
src/: cli.rs  commands_cli.rs  config.rs  container.rs  credentials.rs  daemons.rs  env_files_cli.rs  fork.rs  image.rs  lib.rs  main.rs  mount_cli.rs  runtime.rs  service.rs  services_cli.rs  update.rs  workspace.rs  worktree.rs
src/install_scripts/: README.md
src/manage/: agent.rs  mod.rs  new_session.rs  status.rs  terminal.rs
src/server/: clipboard.rs  commands.rs  daemons.rs  lifecycle.rs  mcp.rs  mod.rs  notify.rs  rest.rs  runner.rs
templates/: Dockerfile  approval_dialog.applescript  container_claude_md.txt  install-claude.sh  install-clipboard.sh  install-codex.sh  install-opencode.sh  opencode-plugin.js  setup_script.sh  skill.md
tests/: e2e.rs  e2e_agents.sh  rate_limit.rs
website/: index.html
