[package]
name = "ai-pod"
version = "0.5.3"
edition = "2024"
default-run = "ai-pod"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = "0.7"
walkdir = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
colored = "2"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
notify-rust = "4"
tempfile = "3"
tokio-stream = "0.1"
futures-util = "0.3"

[[bin]]
name = "host-tools"
path = "src/bin/host_tools.rs"

[dev-dependencies]
