[package]
name = "ai-pod"
version = "0.13.0"
edition = "2024"
default-run = "ai-pod"

[lib]
name = "ai_pod"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls", "blocking", "stream"], default-features = false }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = "0.8"
walkdir = "2"
dirs = "6"
sha2 = "0.11"
hex = "0.4"
colored = "3"
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
notify-rust = "4"
tempfile = "3"
tokio-stream = "0.1"
futures-util = "0.3"
subtle = "2"
regex = "1"
tower_governor = "0.8"
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
lazy_static = "1"
